--- a/pom.xml
+++ b/pom.xml
@@ -8,10 +8,16 @@
   <name>my-app</name>
   <url>https://github.com/microsoft/vscode-remote-try-java</url>
   <dependencies>
-    <dependency>
+   <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.13.2</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-api</artifactId>
+      <version>5.8.2</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
